--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,11 @@
         "zendframework/zend-developer-tools": "dev-master",
         "doctrine/doctrine-orm-module": "dev-master",
         "symfony/yaml": "^2.7",
-        "bjyoungblood/BjyProfiler": "^1.1"
+        "bjyoungblood/BjyProfiler": "^1.1",
+        "zendframework/zend-console": "^2.5"
+        
     },
+   
     "autoload": {
         "psr-4": {"Application\\Model\\": "module/Application/src/Application/Model/"}
     }
